--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -12,7 +12,7 @@
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@preconstruct/next": "^4.0.0",
-    "@tinacms/cli": "^0.60.11",
+    "@tinacms/cli": "^0.60.14",
     "@tryghost/nql": "^0.9.1",
     "@tryghost/string": "^0.1.23",
     "@tryghost/tpl": "^0.1.14",
@@ -32,7 +32,7 @@
     "remark-gfm": "^1.0.0",
     "sort-on": "^5.0.0",
     "styled-components": "^5.3.5",
-    "tinacms": "^0.67.0",
+    "tinacms": "^0.68.0",
     "zod": "^3.14.4"
   },
   "devDependencies": {
@@ -47,8 +47,8 @@
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
-    "react": ">=16.13.1",
-    "next": "^12.0.0"
+    "next": "^12.0.0",
+    "react": ">=16.13.1"
   },
   "preconstruct": {
     "entrypoints": [
