--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -12,15 +12,14 @@
   },
   "dependencies": {
     "@gspenst/next": "*",
-    "@gspenst/nextra-theme-blog": "*",
-    "next": "^12.0.10",
+    "next": "^12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^16.4.13",
     "@types/react": "17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "typescript": "4.6.3"
   }
 }
