--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -7,6 +7,7 @@
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "dev": "next dev",
     "export": "GSPENST_STATIC_EXPORT=true npm run build && next export",
+    "lint": "next lint",
     "start": "next start",
     "typecheck": "tsc --noEmit"
   },
